--- a/icehockey_ServerV3/WebContent/views/imformation.html
+++ b/icehockey_ServerV3/WebContent/views/imformation.html
@@ -12,12 +12,22 @@
 	
 $(document).ready(function(){
   $(".button_invite").click(function(){
-    window.location.href="invitefriend.html";
+    window.location.href="../views/imformation/invitefriend.html";
+  });
+});
+$(document).ready(function(){
+  $(".button_Follow").click(function(){
+    window.location.href="../views/imformation/follow.html";
+  });
+});
+$(document).ready(function(){
+  $(".button_Fans").click(function(){
+    window.location.href="../views/imformation/fans.html";
   });
 });
 $(document).ready(function(){
 	  $(".button_setting").click(function(){
-	    window.location.href="Systemsetting.html";
+	    window.location.href="../views/imformation/Systemsetting.html";
 	  });
 	});
 //$(document).ready(function(){
@@ -27,32 +37,32 @@ $(document).ready(function(){
 //	});
 $(document).ready(function(){
 	  $(".button_next2").click(function(){
-	    window.location.href="learnfrom.html";
+	    window.location.href="../views/imformation/learnfrom.html";
 	  });
 	});
 $(document).ready(function(){
 	  $(".button_next3").click(function(){
-	    window.location.href="gethonor1.html";
+	    window.location.href="../views/imformation/gethonor.html";
 	  });
 	});
 $(document).ready(function(){
 	  $(".button_next4").click(function(){
-	    window.location.href="groupnow.html";
+	    window.location.href="../views/imformation/groupnow.html";
 	  });
 	});
 $(document).ready(function(){
 	  $(".button_next5").click(function(){
-	    window.location.href="enjoyed.html";
+	    window.location.href="../views/imformation/enjoyed.html";
 	  });
 	});
 $(document).ready(function(){
 	  $(".button_next6").click(function(){
-	    window.location.href="equipmentinfo.html";
+	    window.location.href="../views/imformation/equipmentinfo.html";
 	  });
 	});
 $(document).ready(function(){
 	  $(".button_next7").click(function(){
-	    window.location.href="experience.html";
+	    window.location.href="../views/imformation/experience.html";
 	  });
 	});
 </script>
