--- a/icehockey_ServerV3/WebContent/views/imformation/Systemsetting.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/Systemsetting.html
@@ -6,7 +6,15 @@
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>欢迎页面</title>
-<link rel="stylesheet" href="css/personinfo/setting.css">
+<link rel="stylesheet" href="../../css/personinfo/setting.css">
+<script type="text/javascript" src="../../js/jQuery/jquery-3.2.1.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+  $(".button_back").click(function(){
+    window.location.href="../../views/imformation.html";
+  });
+});
+</script>
 </head>
 <body>
 <h1 class="p1">系统设置</h1>
