--- a/icehockey_ServerV3/WebContent/css/bxy/gender.css
+++ b/icehockey_ServerV3/WebContent/css/bxy/gender.css
@@ -1,14 +1,24 @@
 @charset "utf-8";
 
-.man{
-	position:absolutoin;
-	align : center;
-	display: block;
-	padding-top:15%;
+.gender{
+	display: flex;
+	flex-direction: column;
+	-webkit-flex-direction: column;
+	flex: 1;
 }
 
-.lady{
-	position:absolutoin;
-	display: block;
-	padding-top:25%;
+.gender_div{
+	flex: 1;
+	-webkit-flex: 1;
+	align-content: center;
+	-webkit-align-content: center;
+	align-items: center;
+	-webkit-align-items: center;
+	text-align: center;
+	margin: 3rem;
+}
+.text p{
+	 color: #fff;
+	 text-shadow:none !important;
+	 font-size: 1.5rem;
 }
