--- a/icehockey_ServerV3/WebContent/css/bxy/main.css
+++ b/icehockey_ServerV3/WebContent/css/bxy/main.css
@@ -1,4 +1,6 @@
 .main{
+	background-color: transparent;
+	text-shadow:none !important;
 	background-image: url(../../images/lock-screen-background.png);
 	background-size: 100% 100%;
 	height: 100%;
@@ -6,11 +8,12 @@
 	display: flex;
 	flex-direction: column;
 	-webkit-flex-direction: column;
+	display:block!important;
+	background-color: transparent;
 }
 
 
 .text{
-	
 	line-height:2.0;
 	text-align: center;
 	margin-top:12%;
