--- a/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
@@ -21,7 +21,7 @@
         	
         	还有， 此页面我没有人物的全身照片。暂时用头像代替。
         -->
-		<script src="../../js/bxy/rule"></script>
+		<script src="../../js/bxy/rule.js"></script>
 	</head>
 	
 	<body>
@@ -36,7 +36,9 @@
 				<div class="weight_image" align="center" >
 					<img src="../../images/bxy/man.png" />
 				</div>
-				
+			</div>
+			
+<!--		
 		<form method="post" action=".jsp">
  	     	<div data-role="fieldcontain">
     	    	<label for="points">体重KG:</label>
@@ -44,11 +46,12 @@
       		</div>
       		<input type="submit" data-inline="true" value="提交">
     	</form>
-	  			<!--
-	  			这部分是用于实现滑块的刻度效果，未完成，先注释掉。
-	  				<div class="row">
+
+	  		<div data-role="content">
+	  			<input type="hidden" name="weight" value="50">
+	  			<div class="row">
 	  				<div class="ruler ruler-weight">
-		  				<div class="main" value="0">
+		  				<div class="main1" value="0">
 		  					<ul data-initial='true'>
 		                        <li><span class="num">30</span></li>
 		                        <li><span class="num">35</span></li>
@@ -68,20 +71,33 @@
 	                    	</ul>
 		  				</div>
 		  			</div>
+		  			<div align="center">
+		  					<label for="" class="label">
+		  						<span class=" letter">KG</span>
+		  					</label>
+	  					</div>
 	  			</div>
-	  			<label for="" class="label">体重<span class="number height-num" initial-value="8" value="50">50</span><span class=" letter">KG</span></label>
-			-->
-
-				<div data-role="controlgroup" data-type="horizontal" class="btn">
-					<a href="gender.html" data-role="button" data-corners="true" data-transition="slide">
-					上一步
+-->
+			
+			
+				<div data-role="fieldcontain">   	    	
+        			<input type="range" name="points" id="points" value="60" min="30" max="100" class="weight" >
+      			</div>
+      			
+      			<div class="weight">
+      				<span>KG</span>
+      			</div>
+				<div data-role="controlgroup" data-type="horizontal" class="btn" >
+					<a href="#" onClick="javascript :history.back(-1);"  data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="back">
+						<span>上一步</span>
 					</a>
-	  				<a href="manHeight.html" data-role="button" data-corners="true" data-transition="slide">
-	  				下一步
+	  				<a href="manHeight.html"  data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="next">
+	  					<span>下一步</span>
 	  				</a>
 	  			</div>	
-
 			</div>
-		</div>
 	</body>
+		<script src="../../js/urlApi/api.js"></script>
+	<script src="../../js/common/common.js" type="text/javascript"></script>
+	<script src="../../js/bxy/Weight.js" type="text/javascript"></script>
 </html>
