js脚本的代码修改

--- a/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
@@ -17,9 +17,7 @@
 		<!--
         	rule.js脚本是我打算用于实现有刻度的身高滑块的脚本。
         	此脚本暂时未完成。
-        	暂时使用jQuery mobile框架里自带的滑块
-        	
-        	还有， 此页面我没有人物的全身照片。暂时用头像代替。
+        	暂时使用jQuery mobile框架里自带的滑块   
         -->
 		<script src="../../js/bxy/rule.js"></script>
 	</head>
@@ -38,7 +36,8 @@
 				</div>
 			</div>
 			
-<!--		
+<!--注释掉的这段代码用于实现有刻度的身高滑块的脚本。
+	未完成，先注释掉。		
 		<form method="post" action=".jsp">
  	     	<div data-role="fieldcontain">
     	    	<label for="points">体重KG:</label>
@@ -78,8 +77,6 @@
 	  					</div>
 	  			</div>
 -->
-			
-			
 				<div data-role="fieldcontain">   	    	
         			<input type="range" name="points" id="points" value="60" min="30" max="100" class="weight" >
       			</div>
