第一次登录部分完成

--- a/icehockey_ServerV3/WebContent/views/bxy/ladyHeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/ladyHeight.html
@@ -63,7 +63,7 @@
 					<a href="#" onClick="javascript :history.back(-1);"  data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="back">
 						<span>上一步</span>
 					</a>
-	  				<a href="ladyBody.html"  data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="next">
+	  				<a href="#"  data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="next">
 	  					<span>下一步</span>
 	  				</a>
 	  			</div>
