--- a/icehockey_ServerV3/WebContent/views/bxy/manBody.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manBody.html
@@ -5,15 +5,13 @@
 		<meta name="viewport"
 			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     	<meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-		<title>性别选择页面</title>
+		<title>其他信息填写</title>
 		<link rel="stylesheet" href="../../css/bxy/main.css">
 		<link rel="stylesheet" href="../../css/bxy/body.css">
 	
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css"/>
 		<script src="../../js/jQuery/jquery-2.2.3.min.js"></script>
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
-		
-		<script src="../../js/bxy/gender.js"></script>
 	</head>
 	<body>
 		<div data-role="page" class="main1">
@@ -70,7 +68,7 @@
 					<a href="#" onClick="javascript :history.back(-1);"   data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="back">
 						<span>上一步</span>
 					</a>
-	  				<a href="alias.html" data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="next">
+	  				<a href="#" data-ajax="false" data-role="button" data-corners="true" data-transition="slide" class="next">
 	  					<span>下一步</span>
 	  				</a>
 	  			</div>	
