修改body部分跳转url

--- a/icehockey_ServerV3/WebContent/views/bxy/manBody.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manBody.html
@@ -18,7 +18,7 @@
 			<div data-role="content">
 				<div class="top">
 					<div class="top1">
-	    				<a href="alias.html" id="tiaoguo">跳过</a>
+	    				<a href="#" id="tiaoguo" class="tiaoguo">跳过</a>
 	    			</div>	
 					<div class="top2" align="center">
 						<img src="../../images/bxy/man.png" />
@@ -77,5 +77,5 @@
 	</body>
 	<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
-	<script src="../../js/bxy/Body.js" type="text/javascript"></script>
+	<script src="../../js/bxy/body.js" type="text/javascript"></script>
 </html>
