--- a/icehockey_ServerV3/WebContent/views/bxy/ladyBody.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/ladyBody.html
@@ -17,7 +17,7 @@
 		<div data-role="page" class="main">
 			<div data-role="content">
 				
-    			<a href="alias.html" id="tiaoguo">跳过</a>
+    			<a href="#" id="tiaoguo" class="tiaoguo">跳过</a>
     				
 				<div class="weight_image" align="center">
 					<img src="../../images/bxy/lady.png" />
@@ -79,5 +79,5 @@
 	</body>
 	<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
-	<script src="../../js/bxy/Body.js" type="text/javascript"></script>
+	<script src="../../js/bxy/body.js" type="text/javascript"></script>
 </html>
