--- a/icehockey_ServerV3/WebContent/views/bxy/manHeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manHeight.html
@@ -68,5 +68,5 @@
 	</body>
 	<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
-	<script src="../../js/bxy/Height.js" type="text/javascript"></script>
+	<script src="../../js/bxy/height.js" type="text/javascript"></script>
 </html>
