--- a/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
@@ -96,5 +96,5 @@
 	</body>
 		<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
-	<script src="../../js/bxy/Weight.js" type="text/javascript"></script>
+	<script src="../../js/bxy/weight.js" type="text/javascript"></script>
 </html>
