--- a/icehockey_ServerV3/WebContent/views/main.html
+++ b/icehockey_ServerV3/WebContent/views/main.html
@@ -1,205 +1,200 @@
 <!DOCTYPE html>
 <html class="main_html">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title></title>
-		<link rel="stylesheet" href="../css/pageCss/main.css" />
-		<link rel="stylesheet" href="../css/mui.min.css"/>
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
-		
-	</head>
-	<body>
-		<div class="main_top_pages">
-			<div class="div_schedule active">
-				<!--轮播图,用到了mui-->
-				<div class="carousel">
-					<div class="mui-slider">
-  						<div class="mui-slider-group">
-						    <div class="mui-slider-item"><a href="#"><img src="../images/login/top.png"/></a></div>
-						    <div class="mui-slider-item"><a href="#"><img src="../images/ontime/ontime1.jpg" /></a></div>
-						    <div class="mui-slider-item"><a href="#"><img src="../images/login/top.png" /></a></div>
-						 </div>
-					</div>
-				</div>
-				<!--选项卡-->
-				<div class="choose_card_div">
-					<div class="saishizixun">赛事资讯</div>
-					<div class="jiaobingbibai">浇冰必拜</div>
-					<div class="hujvzhuangbei">护具装备</div>
-					<div class="jiaoxueziliao">教学资料</div>
-					<div class="jishutongji"> 技术统计</div>
-					<div class="my2016">我的2016</div>
-				</div>
-				
-				<div class="recommend_div">
-					精彩推荐
-				</div>
-				<!--内容div-->
-				<div class="content_out_div">
-					<!--左侧div-->
-					<div class="left_content_div">
-						<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-						</div>
-						
-						<div class="content_div" >
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							<div class="content_div_right">
-								<div class="content_top">这是标题 </div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-						</div>
-							<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-						</div>
-												<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-						</div>
-						
-						
-						
-					</div>
-					<!--右侧div-->
-					<div class="right_content_div">
-						<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-							
-						</div>
-						<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-							
-						</div>
-						<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-							
-						</div>
-						<div class="content_div">
-							<div class="content_img">
-								<img src="../images/login.png"/>
-							</div>
-							
-							<div class="content_div_right">
-								<div class="content_top">这是标题</div>
-								<div class="content_middle">这是副标题</div>
-								<div class="content_bottom">这是正文内容</div>
-							</div>
-							
-						</div>
-					</div>
-				</div>	 <!-- content out div结束 -->		
-            </div>
-            <!-- div schedule actuve结束 -->	
-            
-             <!-- JQm 的导航页只可以设置五个，当多于5个的时候会分为两列 -->
-           
-			<div class="div_game">
-				<sapn>这是赛程页面</sapn>
-			</div>
-			<div class="div_tool">
-				
-			</div>
-			<div class="div_club">
-				
-			</div>
-			<div class="div_info">
-				
-			</div>
-			<div class="div_mine">
-			</div>
-    
-			
-		</div>
-		
-		
-		<div class="main-bottom">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport"
+	content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+<title></title>
+<link rel="stylesheet" href="../css/pageCss/main.css" />
+<link rel="stylesheet" href="../css/mui.min.css" />
+<script src="../js/mui.min.js"></script>
+<script src="../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 
-			<div onclick="mainClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>主页面</span>
+</head>
+<body>
+	<div class="main_top_pages">
+		<div class="div_schedule active">
+			<!--轮播图,用到了mui-->
+			<div class="carousel">
+				<div class="mui-slider">
+					<div class="mui-slider-group">
+						<div class="mui-slider-item">
+							<a href="#"><img src="../images/login/top.png" /></a>
+						</div>
+						<div class="mui-slider-item">
+							<a href="#"><img src="../images/ontime/ontime1.jpg" /></a>
+						</div>
+						<div class="mui-slider-item">
+							<a href="#"><img src="../images/login/top.png" /></a>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div onclick="saichenClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>赛程</span>
+			<!--选项卡-->
+			<div class="choose_card_div">
+				<div class="saishizixun">赛事资讯</div>
+				<div class="jiaobingbibai">浇冰必拜</div>
+				<div class="hujvzhuangbei">护具装备</div>
+				<div class="jiaoxueziliao">教学资料</div>
+				<div class="jishutongji">技术统计</div>
+				<div class="my2016">我的2016</div>
 			</div>
-			<div onclick="gongjuClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>工具箱</span>
+
+			<div class="recommend_div">精彩推荐</div>
+			<!--内容div-->
+			<div class="content_out_div">
+				<!--左侧div-->
+				<div class="left_content_div">
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+					</div>
+
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+					</div>
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+					</div>
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+					</div>
+
+
+
+				</div>
+				<!--右侧div-->
+				<div class="right_content_div">
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+
+					</div>
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+
+					</div>
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+
+					</div>
+					<div class="content_div">
+						<div class="content_img">
+							<img src="../images/login.png" />
+						</div>
+
+						<div class="content_div_right">
+							<div class="content_top">这是标题</div>
+							<div class="content_middle">这是副标题</div>
+							<div class="content_bottom">这是正文内容</div>
+						</div>
+
+					</div>
+				</div>
 			</div>
-			<div onclick="clubClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>社区</span>
-			</div>
-			<div onclick="infoClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>消息</span>
-			</div>
-			<div onclick="mineClick()">
-				<img src="../images/login/user-photo.png" />
-				<span>我的</span>
-			</div>
+			<!-- content out div结束 -->
 		</div>
-		
-		<script>
-			window.onload=function(){
-				loadCarousel();
-			}
-		</script>
-		<!--
+		<!-- div schedule actuve结束 -->
+
+		<!-- JQm 的导航页只可以设置五个，当多于5个的时候会分为两列 -->
+
+		<div class="div_game">
+			<sapn>这是赛程页面</sapn>
+		</div>
+		<div class="div_tool"></div>
+		<div class="div_club"></div>
+		<div class="div_info"></div>
+		<div class="div_mine"></div>
+
+
+	</div>
+
+
+	<div class="main-bottom">
+
+		<div onclick="mainClick()">
+			<img src="../images/login/user-photo.png" /> <span>主页面</span>
+		</div>
+		<div onclick="saichenClick()">
+			<img src="../images/login/user-photo.png" /> <span>赛程</span>
+		</div>
+		<div onclick="gongjuClick()">
+			<img src="../images/login/user-photo.png" /> <span>工具箱</span>
+		</div>
+		<div onclick="clubClick()">
+			<img src="../images/login/user-photo.png" /> <span>社区</span>
+		</div>
+		<div onclick="infoClick()">
+			<img src="../images/login/user-photo.png" /> <span>消息</span>
+		</div>
+		<div onclick="mineClick()">
+			<img src="../images/login/user-photo.png" /> <span>我的</span>
+		</div>
+	</div>
+
+	<script>
+		window.onload = function() {
+			loadCarousel();
+		}
+	</script>
+	<!--
         	window.onload是一个事件，
         	当文档加载完成之后就会触发该事件，可以为此事件注册事件处理函数，
         	并将要执行的脚本代码放在事件处理函数中，于是就可以避免获取不到对象的情况。
         -->
-		
-<script src="../js/pageJS/main.js"></script>
-	</body>
+
+	<script src="../js/pageJS/main.js"></script>
+	<script src="../js/urlApi/api.js"></script>
+	<script src="../js/common/common.js"></script>
+</body>
 </html>
