--- a/icehockey_ServerV3/WebContent/views/imformation/coachinfo.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/coachinfo.html
@@ -10,48 +10,57 @@
 <script type="text/javascript" src="js/jQuery/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_gear").click(function(){
-	    window.location.href="Systemsetting.html";
+	    window.location.href="Systemsetting.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
   $(".button_invite").click(function(){
-    window.location.href="invitefriend1.html";
+    window.location.href="invitefriend1.html?userid="+urlUserId;
   });
 });
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next1").click(function(){
-	    window.location.href="mylevel.html";
+	    window.location.href="mylevel.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next2").click(function(){
-	    window.location.href="gethonor.html";
+	    window.location.href="gethonor.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next3").click(function(){
-	    window.location.href="myteam.html";
+	    window.location.href="myteam.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next4").click(function(){
-	    window.location.href="oftensite.html";
+	    window.location.href="oftensite.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next5").click(function(){
-	    window.location.href="myequipment.html";
+	    window.location.href="myequipment.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next6").click(function(){
-	    window.location.href="myactivity.html";
+	    window.location.href="myactivity.html?userid="+urlUserId;
 	  });
 	});
 $(document).ready(function(){
+	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_next7").click(function(){
-	    window.location.href="myphoto.html";
+	    window.location.href="myphoto.html?userid="+urlUserId;
 	  });
 	});
 </script>
