--- a/icehockey_ServerV3/WebContent/views/imformation/Systemsetting.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/Systemsetting.html
@@ -10,11 +10,14 @@
 <script type="text/javascript" src="../../js/jQuery/jquery-3.2.1.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){
-  $(".button_back").click(function(){
-    window.location.href="../../views/imformation.html";
-  });
+	var urlUserId=comm.getUrlParameter("userid");
+	  $(".button_back").click(function(){
+	    window.location.href="../imformation.html?userid="+urlUserId;
+	  });
 });
 </script>
+<script src="../../js/urlApi/api.js"></script>
+	<script src="../../js/common/common.js" type="text/javascript"></script>
 </head>
 <body>
 <h1 class="p1">系统设置</h1>
