修改赛程，，跳转链接

--- a/icehockey_ServerV3/WebContent/views/imformation/oscenter.html
+++ b/icehockey_ServerV3/WebContent/views/imformation/oscenter.html
@@ -12,7 +12,7 @@
 $(document).ready(function(){
 	var urlUserId=comm.getUrlParameter("userid");
 	  $(".button_back").click(function(){
-	    window.location.href="../imformation.html?userid="+urlUserId;
+		  window.location.href = "../main.html?userid="+urlUserId;
 	  });
 });
 </script>
