增加school页面，以及修改main.js跳转

--- a/icehockey_ServerV3/WebContent/css/roleChoose/school.css
+++ b/icehockey_ServerV3/WebContent/css/roleChoose/school.css
@@ -1,23 +1,72 @@
-.main{
-	background-image:url(../../images/hobbyChoose/lock-screen-background.png) ;
-	background-size:100% 100%;
+.school_html{
 	height: 100%;
-	margin: 0!important;
 }
+.school_html body{
+	margin: 0 !important;
+	display: flex;
+	height: 100%;
+	-webkit-flex-direction: column;
+}
+
+.top{
+position: fixed;
+width:100%;
+top:0;
+
+background:rgb(3,39,33);
+height: 6rem;
+align-items: center;
+padding: 1rem;
+
+}
+
 .top img{
-	float: left;
-	margin: 2rem 0;
 	width: 2rem;
 	height: 2rem;
 }
 
 .top span{
 	color: rgb(178,196,202);
-	float: left;
-	margin: 1rem 3rem;
-	font-size: 3rem;
-	
+	font-size: 4rem;	
+	 text-shadow:none;
+	 margin: 0 4rem;
 }
 
+.content_out_div{
+	margin-top:8rem;
+	width:100%;
+	overflow: scroll;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	flex-direction: column;
+	background: #FFFFFF;
+
+}
+
+.content_div{
+	display: -webkit-flex;
+	
+	border-bottom: 1px solid #d9d9d9; 
+	
+}
+.content_img{
+	margin: 0;
+	width: 20rem;
+	
+}
+.content_div_right{
+	padding: 1.5rem;
+}
+
+.content_top{
+	font-size: 3rem;
+	color: rgb(89,100,243);
+}
+
+.content_bottom{
+	font-size:2rem;
+	color: #666666;
+}
 
 
