--- a/icehockey_ServerV3/WebContent/views/roleChoose/school.html
+++ b/icehockey_ServerV3/WebContent/views/roleChoose/school.html
@@ -1,23 +1,114 @@
 <!DOCTYPE html>
-<html style="height: 100%;">
+<html class="school_html">
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" href="../../css/roleChoose/team.css"/>
+		<link rel="stylesheet" href="../../css/roleChoose/school.css"/>
 		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
 	</head>
 	
-	<body class="team_body">
+	<body >
 		<div data-role="page" class="main">
-			<div data-role="content">
-				<div class=top>
+			<div data-role="none">
+				
+				<div class="top">
 					<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
-					<span>学校</span>
+					<span>俱乐部</span>
 				</div>
-		
+				
+				<div class="content_out_div">
+			
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/c.jpg"/>
+							</div>
+							
+							<div class="content_div_right">
+								<div class="content_top">哈尔滨市冰星冰球俱乐部</div>
+								<div class="content_bottom">冰球培训、交流</div>
+							</div>
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/d.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">齐齐哈尔兰迪女子冰球俱乐部</div>
+								<div class="content_bottom">发布关于兰迪你工资冰球俱乐部的内容</div>
+							</div>
+						
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/e.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">河北吉祥冰球俱乐部</div>
+								<div class="content_bottom">河北吉祥冰球俱乐部相关资讯</div>
+							</div>
+						
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/c.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">天津国王冰球队</div>
+								<div class="content_bottom">一群热爱冰球的孩子家长组成</div>
+							</div>
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/d.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">USST龙卷风旱地冰球社</div>
+								<div class="content_bottom">上海理工大学</div>
+							</div>
+						
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/e.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">哈尔滨蓝色火焰俱乐部</div>
+								<div class="content_bottom">青少年的选择</div>
+							</div>
+						
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/c.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">北京昆仑红星冰球俱乐部</div>
+								<div class="content_bottom">北京昆仑红星冰球俱乐部</div>
+							</div>
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/d.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">虎仔冰球俱乐部</div>
+								<div class="content_bottom">虎仔冰球俱乐部</div>
+							</div>
+						
+					</div>
+					<div class="content_div">
+							<div class="content_img">
+								<img src="../../images/school/e.jpg"/>
+							</div>
+							<div class="content_div_right">
+								<div class="content_top">小狼冰球俱乐部</div>
+								<div class="content_bottom">小狼冰球俱乐部</div>
+							</div>						
+					</div>
 			</div>
+		</div>
 		</div>
 		
 	</body>
